updated css font, added inline styles, added font script to prevent shift

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -57,7 +57,7 @@ body {
 }
 
 body:not(.fonts-loaded) {
-  opacity: 1 !important;
+  visibility: hidden;
 }
 
 body.fonts-loaded h1,
@@ -191,9 +191,7 @@ p {
 @font-face {
   font-family: 'Bebas Neue';
   src: url("/fonts/Bebas_Neue/BebasNeue-Regular.woff2") format("woff2");
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap;
+  font-display: block;
   ascent-override: 92%;
   descent-override: 8%;
   line-gap-override: 0%;
@@ -215,7 +213,7 @@ p {
   src: url("/fonts/Roboto/Roboto-Regular.woff2") format("woff2");
   font-weight: 400;
   font-style: normal;
-  font-display: optional;
+  font-display: block;
   ascent-override: 92%;
   descent-override: 8%;
   line-gap-override: 0%;
